0.12.100
	+ Restore backup is more robust: inexistent users in a group are ignored
0.12.99
	+ New release
0.12.1
	+ Bugfix: Remove eBox system users when restoring backup. This solves 
	  an issue restoring backups from 0.12
0.12
	+ Use the new EBox::Model::Row api
	+ Check if there is any added user and show a message
	  in case there isn't any.
	+ Restore users reading from ldiff and adding them through
	  eBox API
	+ Set password-hash in slapd.conf to make password changes from samba sync
	  the user password
0.11.101
	+ New release
0.11.100
	+ onInstall() functionality moved to migration script
	+ Fixed several typos
0.11.99
	+ Remove use of Apache::Singleton
0.11.3
	+ Check used uid's on every posixAccount object under dc=ebox, 
	  instead of only under ou=Users,dc=ebox. This solves nasty issues
	  with Samba PDC when adding machines and creating users with 
	  repeated uid
0.11.2
    + Do not generate a new LDAP password if it already exists
0.11.1
	+ Fix issue with module naming which prevented backups from being
	restored
0.11
	+ Initial Ubuntu packaging
	+ bugfix. fix issue with module naming which prevented backups from being
	  restored
0.10.99
	+ Create pseudo-model to use the users table with Ajax 
0.10
	+ Allow dots in user names 
0.9.100
	+ New release
0.9.99
	+ Bugfix in EBox::Ldap
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ Make OpenLDAP listen on internal interfaces
0.9
	+ Added Polish translation
	+ Added Aragonese translation
	+ Added Dutch translation
	+ Added German translation

0.8.99
	+ New release
0.8.1
	+ Minor workaround. Create slapd run directory in case it does not
	  exist
0.8
	+ Fix message
0.7.99
        + Add extended backup support for LDAP
	+ Performance tuning to slapd
	+ Some minor code improvements
	+ Quota now allows unlimited space and i-nodes number
0.7.1
	+ Add delObjectclass (useful for ldap clean actions)
	+ Detect and recover when ldap connection is broken (#25)
	+ Make EBox::Ldap a singleton class